force-app/main/default/objects/Lead/fields/AA_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>AA_Policy_ID__c</fullName>
    <label>Auto Accident Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>