force-app/main/default/objects/Lead/fields/AA_Subscriber_DOB__c.field-meta.xml
<CustomField>
    <fullName>AA_Subscriber_DOB__c</fullName>
    <label>Auto Accident Subscriber DOB</label>
    <type>Date</type>
</CustomField>