force-app/main/default/objects/Lead/fields/AA_Subscriber_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>AA_Subscriber_Middle_Name__c</fullName>
    <label>Auto Accident Subscriber Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>