force-app/main/default/objects/Lead/fields/Auto_Accident_Provider_Company__c.field-meta.xml
<CustomField>
    <fullName>Auto_Accident_Provider_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Accident Provider Company</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Leads (Auto Accident Provider Company)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>