force-app/main/default/objects/Lead/fields/Caller_Email__c.field-meta.xml
<CustomField>
    <fullName>Caller_Email__c</fullName>
    <label>Caller Email</label>
    <type>Email</type>
</CustomField>