force-app/main/default/objects/Lead/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Caller Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>