force-app/main/default/objects/Lead/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <description>Client&apos;s date of birth</description>
    <inlineHelpText>Enter the client&apos;s date of birth (not the insurance holder)</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>