force-app/main/default/objects/Lead/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>