force-app/main/default/objects/Lead/fields/Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number__c</fullName>
    <label>Primary Insurance Group Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>