force-app/main/default/objects/Lead/fields/Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Phone_Number__c</fullName>
    <description>800 Number on back of the card</description>
    <label>Primary Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>