force-app/main/default/objects/Lead/fields/Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_ID__c</fullName>
    <label>Primary Insurance Policy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>