force-app/main/default/objects/Lead/fields/LOC__c.field-meta.xml
<CustomField>
    <fullName>LOC__c</fullName>
    <label>LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detox</fullName>
            </value>
            <value>
                <fullName>PHP/Day-Night</fullName>
            </value>
            <value>
                <fullName>IOP</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>