force-app/main/default/objects/Lead/fields/Patient_Relationship_to_Secondary_Insure__c.field-meta.xml
<CustomField>
    <fullName>Patient_Relationship_to_Secondary_Insure__c</fullName>
    <label>Patient Relationship to Secondary Insure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Patient_Relationship_With_Insured_GP</valueSetName>
    </valueSet>
</CustomField>