force-app/main/default/objects/Lead/fields/Patient_Relationship_to_Tertiary_Insured__c.field-meta.xml
<CustomField>
    <fullName>Patient_Relationship_to_Tertiary_Insured__c</fullName>
    <label>Patient Relationship to Tertiary Insured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Patient_Relationship_With_Insured_GP</valueSetName>
    </valueSet>
</CustomField>