force-app/main/default/objects/Lead/fields/Primary_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>