force-app/main/default/objects/Lead/fields/Primary_Subscriber_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscriber_Last_Name__c</fullName>
    <label>Primary Subscriber Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>