force-app/main/default/objects/Lead/fields/Referent__c.field-meta.xml
<CustomField>
    <fullName>Referent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred In Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Patient Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads(Referent Organization)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>