force-app/main/default/objects/Lead/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Referred_to_Organization__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referred To)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>