force-app/main/default/objects/Lead/fields/Referred_to_Organization__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred Out Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Patient Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads(Referred to Organization)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>