force-app/main/default/objects/Lead/fields/Referring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Referent__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referring Contact)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>