force-app/main/default/objects/Lead/fields/Relationship_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Client__c</fullName>
    <label>Relationship to Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Loved_One</fullName>
                <label>Loved One</label>
            </value>
            <value>
                <fullName>Parent</fullName>
                <label>Loved One (Parent)</label>
            </value>
            <value>
                <fullName>Spouse</fullName>
                <label>Loved One (Spouse)</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>