force-app/main/default/objects/Lead/fields/Secondary_Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Phone_Number__c</fullName>
    <label>Secondary Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>