force-app/main/default/objects/Lead/fields/Secondary_Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Policy_ID__c</fullName>
    <label>Secondary Insurance Policy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>