force-app/main/default/objects/Lead/fields/Secondary_Insurance_Provider_payor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Provider_payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Leads (Secondary Insurance Provider payor)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>