force-app/main/default/objects/Lead/fields/Secondary_Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subscriber_Name__c</fullName>
    <label>Secondary Subscriber First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>