force-app/main/default/objects/Lead/fields/Subscriber_DOB__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_DOB__c</fullName>
    <label>Primary Subscriber DOB</label>
    <type>Date</type>
</CustomField>