force-app/main/default/objects/Lead/fields/Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Name__c</fullName>
    <label>Primary Subscriber First Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>