force-app/main/default/objects/Lead/fields/Tertiary_Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Insurance_Policy_ID__c</fullName>
    <label>Tertiary Insurance Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>