force-app/main/default/objects/Lead/fields/Tertiary_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Leads (Tertiary Insurance Provider)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>