force-app/main/default/objects/Lead/fields/Tertiary_Subscriber_DOB__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Subscriber_DOB__c</fullName>
    <label>Tertiary Subscriber DOB</label>
    <type>Date</type>
</CustomField>