force-app/main/default/objects/Lead/fields/Tertiary_Subscriber_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Subscriber_Last_Name__c</fullName>
    <label>Tertiary Subscriber Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>