force-app/main/default/objects/Lead/fields/WC_Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>WC_Date_of_Accident__c</fullName>
    <label>Date of Accident</label>
    <type>Date</type>
</CustomField>