force-app/main/default/objects/Lead/fields/WC_Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>WC_Insurance_Policy_ID__c</fullName>
    <label>Worker&apos;s Comp Insurance Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>