force-app/main/default/objects/Lead/fields/WC_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>WC_Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker&apos;s Comp Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Leads (Worker&apos;s Comp Insurance Provider)</relationshipLabel>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>